prefs.xhtml: fix display language selection
* radiobutton names are not allowed to contain hyphen '-'
* radiobutton (or maybe all) input values must be numerical

--- a/Wadoku.plist.in
+++ b/Wadoku.plist.in
@@ -22,8 +22,8 @@
         <string>wadoku_front_matter</string>
         <key>DCSDictionaryDefaultPrefs</key>
         <dict>
-            <key>display-lang</key>
-            <string>ja</string>
+            <key>displaylang</key>
+            <string>0</string>
             <key>version</key>
             <string>2</string>
             <key>display-uid</key>
